[package]
name = "esp-idf-experiments"
version = "0.1.0"
authors = ["Garbaz <garbaz@t-online.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[lib]
test = false
bench = false

[[bin]]
name = "esp-idf-experiments"
test = false
bench = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
embedded-svc = { version = "0.27", default-features = false }
toml-cfg = "0.2"
anyhow = "1"
ssd1306 = "0.8"
embedded-graphics = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
postcard = "1"
# futures = "0.3"

[build-dependencies]
embuild = "0.31.3"
